@@ -1,3 +1,4 @@
+* Add reset_default method to ir.default
 * Doesn't append '%' to "like", "ilike" clauses
 * Handle database dump and restore with password
 * Add float_time attribute in fields view
